# coding-competitions-archive

./: .gitignore  Cargo.toml  Dockerfile  README.md  bashrc  helix-config.toml  helix-languages.toml  lib.rs
codejam/2008/amer_semifinal/code_sequence/: solution.hs  solution.rs
codejam/2008/amer_semifinal/king/: solution.rs
codejam/2008/amer_semifinal/king/solution/src/: main.rs
codejam/2008/amer_semifinal/mixing_bowls/: solution.hs  solution.rs
codejam/2008/amer_semifinal/test_passing_probability/: solution.hs  solution.rs
codejam/2008/apac_semifinal/apocalypse_soon/: solution.rs
codejam/2008/apac_semifinal/millionaire/: solution.rs
codejam/2008/apac_semifinal/modern_art_plagiarism/: solution.rs
codejam/2008/apac_semifinal/what_are_birds/: solution.rs
codejam/2008/emea_semifinal/bus_stops/: solution.rs
codejam/2008/emea_semifinal/painting_a_fence/: solution.rs
codejam/2008/emea_semifinal/rainbow_trees/: solution.rs
codejam/2008/emea_semifinal/scaled_triangle/: solution.rs
codejam/2008/qualification_round/fly_swatter/: solution.rs
codejam/2008/qualification_round/fly_swatter/solution/src/: main.rs
codejam/2008/qualification_round/saving_the_universe/: solution.hs  solution.rs
codejam/2008/qualification_round/train_timetable/: solution.hs  solution.rs
codejam/2008/round_1a/milkshakes/: solution.rs
codejam/2008/round_1a/milkshakes/solution/src/: main.rs
codejam/2008/round_1a/minimum_scalar_product/: solution.hs  solution.rs
codejam/2008/round_1a/numbers/: solution.hs  solution.rs
codejam/2008/round_1b/crop_triangles/: solution.hs  solution.rs
codejam/2008/round_1b/mousetrap/: solution.hs  solution.rs
codejam/2008/round_1b/number_sets/: solution.rs
codejam/2008/round_1c/increasing_speed_limits/: solution.rs
codejam/2008/round_1c/increasing_speed_limits/solution/src/: main.rs
codejam/2008/round_1c/text_messaging_outrage/: solution.hs  solution.rs
codejam/2008/round_1c/ugly_numbers/: solution.hs  solution.rs
codejam/2008/round_2/cheating_a_boolean_tree/: solution.hs  solution.rs
codejam/2008/round_2/permrle/: solution.rs
codejam/2008/round_2/permrle/solution/src/: main.rs
codejam/2008/round_2/star_wars/: solution.hs  solution.rs
codejam/2008/round_2/triangle_areas/: solution.hs  solution.rs
codejam/2008/round_3/endless_knight/: solution.hs  solution.rs
codejam/2008/round_3/how_big_are_the_pockets/: solution.hs  solution.rs
codejam/2008/round_3/no_cheating/: solution.rs
codejam/2008/round_3/portal/: solution.rs
codejam/2008/world_finals/bridge_builders/: solution.rs
codejam/2008/world_finals/juice/: solution.rs
codejam/2008/world_finals/mine_layer/: solution.rs
codejam/2008/world_finals/ping_pong_balls/: solution.rs
codejam/2008/world_finals/the_year_of_code_jam/: solution.rs
codejam/2009/qualification_round/alien_language/: solution.rs
codejam/2009/qualification_round/watersheds/: solution.rs
codejam/2009/qualification_round/welcome_to_code_jam/: solution.rs
codejam/2009/round_1a/collecting_cards/: solution.rs
codejam/2009/round_1a/crossing_the_road/: solution.rs
codejam/2009/round_1a/multi-base_happiness/: solution.rs
codejam/2009/round_1b/decision_tree/: solution.rs
codejam/2009/round_1b/square_math/: solution.rs
codejam/2009/round_1b/the_next_number/: solution.rs
codejam/2009/round_1c/all_your_base/: solution.rs
codejam/2009/round_1c/bribe_the_prisoners/: solution.rs
codejam/2009/round_1c/center_of_mass/: solution.rs
codejam/2009/round_2/a_digging_problem/: solution.rs
codejam/2009/round_2/crazy_rows/: solution.rs
codejam/2009/round_2/stock_charts/: solution.rs
codejam/2009/round_2/watering_plants/: solution.rs
codejam/2009/round_3/alphabetomials/: solution.rs
codejam/2009/round_3/ez-sokoban/: solution.rs
codejam/2009/round_3/football_team/: solution.rs
codejam/2009/round_3/interesting_ranges/: solution.rs
codejam/2009/world_finals/doubly-sorted_grid/: solution.rs
codejam/2009/world_finals/lights/: solution.rs
codejam/2009/world_finals/marbles/: solution.rs
codejam/2009/world_finals/min_perimeter/: solution.rs
codejam/2009/world_finals/wi-fi_towers/: solution.rs
codejam/2009/world_finals/year_of_more_code_jam/: solution.rs
codejam/2010/qualification_round/fair_warning/: solution.py
codejam/2010/qualification_round/snapper_chain/: solution.py
codejam/2010/qualification_round/theme_park/: solution.py
codejam/2010/round_1a/make_it_smooth/: solution.py
codejam/2010/round_1a/number_game/: solution.py
codejam/2010/round_1a/rotate/: solution.py
codejam/2010/round_1b/file_fix-it/: solution.py
codejam/2010/round_1b/picking_up_chicks/: solution.py
codejam/2010/round_1b/your_rank_is_pure/: solution.py
codejam/2010/round_1c/load_testing/: solution.py
codejam/2010/round_1c/making_chess_boards/: solution.py
codejam/2010/round_1c/rope_intranet/: solution.py
codejam_rs_lib/: Cargo.toml
codejam_rs_lib/src/: lib.rs
lib/: algorithms.rs  collections.rs  root.rs
vsc_extension/: README.md  extension.js  package-lock.json  package.json
