[package]
name = "solutions"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "lib/root.rs"

[[bin]]
name = "code_sequence"
path = "codejam/2008/amer_semifinal/code_sequence/solution.rs"

[[bin]]
name = "king"
path = "codejam/2008/amer_semifinal/king/solution.rs"

[[bin]]
name = "mixing_bowls"
path = "codejam/2008/amer_semifinal/mixing_bowls/solution.rs"

[[bin]]
name = "test_passing_probability"
path = "codejam/2008/amer_semifinal/test_passing_probability/solution.rs"

[[bin]]
name = "apocalypse_soon"
path = "codejam/2008/apac_semifinal/apocalypse_soon/solution.rs"

[[bin]]
name = "millionaire"
path = "codejam/2008/apac_semifinal/millionaire/solution.rs"

[[bin]]
name = "modern_art_plagiarism"
path = "codejam/2008/apac_semifinal/modern_art_plagiarism/solution.rs"

[[bin]]
name = "what_are_birds"
path = "codejam/2008/apac_semifinal/what_are_birds/solution.rs"

[[bin]]
name = "bus_stops"
path = "codejam/2008/emea_semifinal/bus_stops/solution.rs"

[[bin]]
name = "fly_swatter"
path = "codejam/2008/qualification_round/fly_swatter/solution.rs"

[[bin]]
name = "saving_the_universe"
path = "codejam/2008/qualification_round/saving_the_universe/solution.rs"

[[bin]]
name = "train_timetable"
path = "codejam/2008/qualification_round/train_timetable/solution.rs"

[[bin]]
name = "milkshakes"
path = "codejam/2008/round_1a/milkshakes/solution.rs"

[[bin]]
name = "minimum_scalar_product"
path = "codejam/2008/round_1a/minimum_scalar_product/solution.rs"

[[bin]]
name = "numbers"
path = "codejam/2008/round_1a/numbers/solution.rs"

[[bin]]
name = "crop_triangles"
path = "codejam/2008/round_1b/crop_triangles/solution.rs"

[[bin]]
name = "mousetrap"
path = "codejam/2008/round_1b/mousetrap/solution.rs"

[[bin]]
name = "number_sets"
path = "codejam/2008/round_1b/number_sets/solution.rs"

[[bin]]
name = "increasing_speed_limits"
path = "codejam/2008/round_1c/increasing_speed_limits/solution.rs"

[[bin]]
name = "text_messaging_outrage"
path = "codejam/2008/round_1c/text_messaging_outrage/solution.rs"

[[bin]]
name = "ugly_numbers"
path = "codejam/2008/round_1c/ugly_numbers/solution.rs"

[[bin]]
name = "cheating_a_boolean_tree"
path = "codejam/2008/round_2/cheating_a_boolean_tree/solution.rs"

[[bin]]
name = "permrle"
path = "codejam/2008/round_2/permrle/solution.rs"

[[bin]]
name = "star_wars"
path = "codejam/2008/round_2/star_wars/solution.rs"

[[bin]]
name = "triangle_areas"
path = "codejam/2008/round_2/triangle_areas/solution.rs"

[[bin]]
name = "endless_knight"
path = "codejam/2008/round_3/endless_knight/solution.rs"

[[bin]]
name = "how_big_are_the_pockets"
path = "codejam/2008/round_3/how_big_are_the_pockets/solution.rs"

[[bin]]
name = "no_cheating"
path = "codejam/2008/round_3/no_cheating/solution.rs"

[[bin]]
name = "portal"
path = "codejam/2008/round_3/portal/solution.rs"
